<resources>
    <string name="app_name">Slimming</string>
    <string name="on_destroy">Activity is Destroyed</string>
    <string name="exit_hint">Tap Back again to exit.</string>
    <string name="handle_unknow_msg">Unknow message.what: what=%1$d , time=%2$x dataBundle=%3$s </string>
    <string name="title_sport">Sport</string>
    <string name="title_analyze">Analyze</string>
    <string name="title_diet">Diet</string>
    <string name="title_health">Health</string>
    <string name="title_me">Me</string>
    <string name="unknow_exception">Unknow Exception</string>
    <string name="key">key</string>
    <string name="value">text</string>

    <!-- Strings related to login -->
    <string name="sign_in">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repassword">Input password again</string>
    <string name="illegal_username">This Username is invalid</string>
    <string name="illegal_password">This Password is invalid</string>
    <string name="password_to_short">This Password is too short</string>
    <string name="field_required">This field is required</string>
    <string name="sign_on">Sign on</string>
    <string name="login_success">Login success.</string>
    <string name="login_fail">Login fail.</string>

    <string name="password_not_same">Password is not same , please input again</string>
    <string name="register_success">Register success, you will be redirect to Sign in Page</string>
    <string name="register_fail">Register fail </string>

    <!--me fragment-->
    <string name="me_username">Username:</string>
    <string name="me_name">Name:</string>
    <string name="me_phone">Phone:</string>
    <string name="me_email">Email:</string>
    <string name="me_birthday">Birthday:</string>
    <string name="me_gender">Gender:</string>
    <string name="me_height">Height:</string>
    <string name="me_weight">Weight:</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logout success!</string>
    <string name="refresh_userinfo_complete">Refresh user info complete!</string>
    <string name="refresh_userinfo_fail">Refresh user info fail</string>
    <string name="me_update_info_hint">click head to update info</string>

    <!--update activity-->
    <string name="update">Update</string>
    <string name="illegal_phone">Illegal phone,please input another phone</string>
    <string name="illegal_email">Illegal email,please try again</string>
    <string name="illegal_birthday">Illegal birthday,wrong date type,please try again</string>
    <string name="illegal_name">Illegal name,at least 2 characters and should not exceed 20 characters</string>
    <string name="illegal_gender">Illegal gender,only support \'男\',\'女\',\'未知\'</string>
    <string name="illegal_weight">Illegal weight,only support numbers</string>
    <string name="illegal_height">Illegal height,only support numbers</string>
    <string name="update_userinfo_success">Update user\'s information success</string>
    <string name="update_userinfo_fail">Update user\'s information fail!</string>

    <!--change password-->
    <string name="prompt_change_password">Change Password</string>
    <string name="confirm">Confirm</string>
    <string name="change_password_success">Change password successful, please login again.</string>
    <string name="change_password_fail">Change password fail.</string>
    <string name="prompt_oldpassword">Old Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_renewpassword">Input again</string>

    <!--food category-->
    <string name="category1">谷薯芋,杂豆,主食</string>
    <string name="category2">蛋类,肉类及制品</string>
    <string name="category3">奶类及制品</string>
    <string name="category4">蔬果和菌藻</string>
    <string name="category5">坚果,大豆及制品</string>
    <string name="category6">饮料</string>
    <string name="category7">食用油,油脂及制品</string>
    <string name="category8">调味品</string>
    <string name="category9">零食,点心,冷饮</string>
    <string name="category10">其他</string>
    <string name="category11">菜肴</string>

    <string name="query_calorie">Query calories</string>
    <string name="search_food_hint">Food name</string>
    <string name="search">Search</string>
    <string name="food_recommend">Food recommend</string>
    <string name="calorie">Calorie</string>
    <string name="calorie_acronym">cal/100g</string>
    <string name="category">Category</string>
    <string name="food_intro">Food Intro</string>
    <string name="food_name">Name:</string>
    <string name="food_calorie">Calorie:</string>
    <string name="food_category">Category:</string>
    <string name="recommend">Recommend:</string>
    <string name="food_comment">Comment:</string>
    <string name="food_nutrition">Nutrition</string>
    <string name="food_measurement">Measurement</string>
    <string name="nutritions">Nutritions</string>
    <string name="nutrition_content">/100g</string>
    <string name="nutritionCalorie">Calorie</string>
    <string name="nutritionCarbohydrate">Carbohydrate(g)</string>
    <string name="nutritionFat">Fat(克)</string>
    <string name="nutritionProtein">Protein(克)</string>
    <string name="nutritionFibre">Fibre(克)</string>
    <string name="nutritionVitaminA">VitaminA(μg)</string>
    <string name="nutritionVitaminC">VitaminC(mg)</string>
    <string name="nutritionVitaminE">VitaminE(mg)</string>
    <string name="nutritionCarotene">Carotene(μg)</string>
    <string name="nutritionThiamine">Thiamine(mg)</string>
    <string name="nutritionRiboflavin">Riboflavin(mg)</string>
    <string name="nutritionNiacin">Niacin(mg)</string>
    <string name="nutritionCholesterol">Cholesterol(mg)</string>
    <string name="nutritionMagnesium">Magnesium(mg)</string>
    <string name="nutritionCalcium">Calcium(mg)</string>
    <string name="nutritionIron">Iron(mg)</string>
    <string name="nutritionZinc">Zinc(mg)</string>
    <string name="nutritionCopper">Copper(mg)</string>
    <string name="nutritionManganese">Manganese(mg)</string>
    <string name="nutritionPotassium">Potassium(mg)</string>
    <string name="nutritionPhosphorus">Phosphorus(mg)</string>
    <string name="nutritionSodium">Sodium(mg)</string>
    <string name="nutritionSelenium">Selenium(μg)</string>
    <string name="load_food_fail">Load food information fail.</string>
    <string name="food_measurement_content">calorie(eatable)</string>
    <string name="heart_rate">Heart rate</string>
    <string name="blood_persure">Blood persure</string>
    <string name="blood_sugar">Blood sugar</string>
    <string name="weight">Weight</string>
    <string name="heart_rate_default_result">00</string>
    <string name="touch_screen_to_start">Tap screen to start</string>
    <string name="cover_camera_with_finger">Please cover camera with finger</string>

    <string name="need_permission">Need Permission!</string>

    <string name="blood_glucose_hint">Blood Glucose(mmo/l)</string>
    <string name="systolic_blood_pressure_hint">Systolic Pressure(kPa)</string>
    <string name="diastolic_blood_pressure_hint">Diastolic Pressure(kPa)</string>
    <string name="illegal_input">Illegal Input</string>
    <string name="upload_success">Upload success!</string>
    <string name="upload_fail">Upload fail </string>
    <string name="weight_recoard_hint">Weight(kg)</string>

    <string name="run">Run now</string>
    <string name="begin_run">Run</string>
    <string name="stop_run">Stop</string>
    <string name="kilometer">km</string>
    <string name="run_distance_kilometer">3.11</string>
    <string name="share">Share</string>
    <string name="run_time_num">00:32:20</string>
    <string name="run_pace_num">9\'17</string>
    <string name="run_kcalorie_num">218.2</string>
    <string name="run_duration">Duration</string>
    <string name="run_pace">Pace</string>
    <string name="run_kcalorie">Kcalo</string>
    <string name="exit_without_confrim">You\'re running now, The data will not be saved if you exit now, Do you want to exit?</string>
    <string name="run_exit_warn">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="run_record">Run Record</string>

    <string name="choose_date">Please choose date:</string>
    <string name="start_date">StartDate:</string>
    <string name="end_date">EndDate:</string>
    <string name="set">Set</string>

    <string name="refresh_runrecord_complete">Refresh run record complete!</string>
    <string name="refresh_runrecord_fail">Refresh run record fail!</string>

    <string name="chooseADevice">Please Choose a device</string>
    <string name="print">Print</string>
</resources>
