<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="user"
            type="cn.yanweijia.slimming.entity.User"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_username"/>
            <TextView
                android:id="@+id/textview_me_username"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.username}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_phone"/>
            <TextView
                android:id="@+id/textview_me_phone"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.phone}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_email"/>
            <TextView
                android:id="@+id/textview_me_email"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.email}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_name"/>
            <TextView
                android:id="@+id/textview_me_name"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.name}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_birthday"/>
            <TextView
                android:id="@+id/textview_me_birthday"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.birthday}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_gender"/>
            <TextView
                android:id="@+id/textview_me_gender"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.gender}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_height"/>
            <TextView
                android:id="@+id/textview_me_height"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.height}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/key_weight"
                android:text="@string/me_weight"/>
            <TextView
                android:id="@+id/textview_me_weight"
                android:layout_margin="@dimen/margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/value_weight"
                android:text="@{user.weight}"/>
        </LinearLayout>
        <Button
            android:id="@+id/button_log"
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"/>
    </LinearLayout>
</layout>
